data/derived/comb/progs/unify/prog4774.ml.out
Characters 152-182:
  | Average (e1,e2) -> (eval(e1,x,y) +. eval(e2,x,y)) / 2
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
